--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npm run start"
+    "start": "npm run start",
+    "heroku-postbuild": "npm run build"
+
   },
   "keywords": [],
   "author": "",
