changing main package.json

--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "npm run start",
     "install": "cd journey && npm install",
-    "build": "cd journey && npm run build",
+    "build": "npm run build",
     "heroku-postbuild": "npm run build"
 
   },
