--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "server",
   "version": "1.0.0",
+  "engines": {
+    "node": "14.5.0"
+  },
   "description": "Journey Travel App",
   "main": "server.js",
   "scripts": {
