--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "server",
   "version": "1.0.0",
   "engines": {
-    "node": "14.5.0"
+    "node": "14.5.0",
+    "npm": "6.14.5"
   },
   "description": "Journey Travel App",
   "main": "server.js",
