--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "start:dev": "concurrently \"nodemon --ignore 'journey/*'\" \"npm run journey\"",
     "client": "cd journey && npm run start",
     "install": "cd journey && npm install",
-    "build": "cd journey && npm run build",
-    "heroku-postbuild": "npm run build"
+    "build": "cd journey && npm run build"
+    // "heroku-postbuild": "npm run build"
 
   },
   "keywords": [],
