--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "description": "Journey Travel App",
   "main": "server.js",
   "scripts": {
-    "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
+    "start": "cd journey && npm start",
     "start:prod": "node server.js",
     "start:dev": "concurrently \"nodemon --ignore 'journey/*'\" \"npm run journey\"",
     "client": "cd journey && npm run start",
@@ -19,6 +19,9 @@
   "author": "Logan Hemphill, Nicole O'Bomsawin",
   "license": "ISC",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.30",
+    "@fortawesome/free-solid-svg-icons": "^5.14.0",
+    "@fortawesome/react-fontawesome": "^0.1.11",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
