--- a/package.json
+++ b/package.json
@@ -8,45 +8,30 @@
   "description": "Journey Travel App",
   "main": "server.js",
   "scripts": {
-    "start": "cd journey && npm start",
+    "start": "cd client && npm start",
     "start:prod": "node server.js",
-<<<<<<< HEAD
-    "start:dev": "concurrently \"nodemon --ignore 'journey/*'\" \"npm run journey\"",
-    "client": "cd journey && npm run start",
-    "install": "cd journey && npm install",
-    "build": "cd journey && npm run build"
-=======
     "start:dev": "concurrently \"nodemon --ignore 'client'\" \"npm run client\"",
     "client": "cd client && npm run start",
     "install": "cd client && npm install",
     "build": "cd client && npm run build"
->>>>>>> 12ee2d96dc32ebdb20757932bee3d1f105eb8d26
   },
   "keywords": [],
   "author": "Logan Hemphill, Nicole O'Bomsawin",
   "license": "ISC",
   "dependencies": {
-<<<<<<< HEAD
     "@fortawesome/fontawesome-svg-core": "^1.2.30",
     "@fortawesome/free-solid-svg-icons": "^5.14.0",
     "@fortawesome/react-fontawesome": "^0.1.11",
-=======
     "axios": "^0.19.2",
     "bcrypt": "^5.0.0",
->>>>>>> 12ee2d96dc32ebdb20757932bee3d1f105eb8d26
     "body-parser": "^1.19.0",
     "concurrently": "^5.3.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-<<<<<<< HEAD
-    "mongoose": "^5.10.0",
-    "react-places-autocomplete": "^7.3.0"
-=======
     "express-session": "^1.17.1",
     "if-env": "^1.0.4",
     "mongoose": "^5.9.28",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0"
->>>>>>> 12ee2d96dc32ebdb20757932bee3d1f105eb8d26
   }
 }
