--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "if-env": "^1.0.4",
     "mongoose": "^5.9.28",
     "passport": "^0.4.1",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "react-date-picker": "^8.0.1"
   }
 }
