--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "mongoose": "^5.9.28",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
-    "react-date-picker": "^8.0.1"
+    "react-cool-onclickoutside": "^1.5.5",
+    "react-date-picker": "^8.0.1",
+    "use-places-autocomplete": "^1.3.10"
   }
 }
