--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "description": "Journey Travel App",
   "main": "server.js",
   "scripts": {
-    "start": "cd client && npm start",
+    "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
     "start:prod": "node server.js",
     "start:dev": "concurrently \"nodemon --ignore 'client'\" \"npm run client\"",
     "client": "cd client && npm run start",
@@ -36,6 +36,7 @@
     "passport-local": "^1.0.0",
     "react-cool-onclickoutside": "^1.5.5",
     "react-date-picker": "^8.0.1",
+    "recompose": "^0.30.0",
     "use-places-autocomplete": "^1.3.10"
   }
 }
