--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.30",
     "@fortawesome/free-solid-svg-icons": "^5.14.0",
     "@fortawesome/react-fontawesome": "^0.1.11",
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
     "axios": "^0.19.2",
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
@@ -31,12 +33,11 @@
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "if-env": "^1.0.4",
+    "material-ui-search-bar": "^1.0.0",
     "mongoose": "^5.9.28",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
-    "react-cool-onclickoutside": "^1.5.5",
     "react-date-picker": "^8.0.1",
-    "recompose": "^0.30.0",
-    "use-places-autocomplete": "^1.3.10"
+    "react-load-script": "0.0.6"
   }
 }
