--- a/package.json
+++ b/package.json
@@ -37,7 +37,6 @@
     "mongoose": "^5.9.28",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
-    "react-date-picker": "^8.0.1",
-    "react-load-script": "0.0.6"
+    "react-date-picker": "^8.0.1"
   }
 }
