--- a/package.json
+++ b/package.json
@@ -33,10 +33,8 @@
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "if-env": "^1.0.4",
-    "material-ui-search-bar": "^1.0.0",
     "mongoose": "^5.9.28",
     "passport": "^0.4.1",
-    "passport-local": "^1.0.0",
-    "react-date-picker": "^8.0.1"
+    "passport-local": "^1.0.0"
   }
 }
