--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "if-env": "^1.0.4",
     "mongoose": "^5.9.28",
     "passport": "^0.4.1",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "prop-types": "^15.7.2"
   }
 }
