--- a/package.json
+++ b/package.json
@@ -33,9 +33,11 @@
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "if-env": "^1.0.4",
+    "moment": "^2.27.0",
     "mongoose": "^5.9.28",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
-    "prop-types": "^15.7.2"
+    "prop-types": "^15.7.2",
+    "react-moment": "^0.9.7"
   }
 }
