--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "prop-types": "^15.7.2",
-    "react-moment": "^0.9.7"
+    "react-moment": "^0.9.7",
+    "sweetalert": "^2.1.2"
   }
 }
