--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "passport-local": "^1.0.0",
     "prop-types": "^15.7.2",
     "react-moment": "^0.9.7",
+    "request": "^2.88.2",
     "sweetalert": "^2.1.2"
   }
 }
