--- a/package.json
+++ b/package.json
@@ -23,13 +23,12 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.30",
     "@fortawesome/free-solid-svg-icons": "^5.14.0",
     "@fortawesome/react-fontawesome": "^0.1.11",
-    "@material-ui/core": "^4.11.0",
-    "@material-ui/icons": "^4.9.1",
     "axios": "^0.19.2",
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "concurrently": "^5.3.0",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "if-env": "^1.0.4",
@@ -39,7 +38,6 @@
     "passport-local": "^1.0.0",
     "prop-types": "^15.7.2",
     "react-moment": "^0.9.7",
-    "request": "^2.88.2",
     "sweetalert": "^2.1.2"
   }
 }
