--- a/package.json
+++ b/package.json
@@ -31,14 +31,15 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "html2canvas": "^1.0.0-rc.7",
     "if-env": "^1.0.4",
+    "jspdf": "^2.1.1",
     "moment": "^2.27.0",
     "mongoose": "^5.9.28",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "prop-types": "^15.7.2",
     "react-moment": "^0.9.7",
-    "react-to-pdf": "0.0.13",
     "sweetalert": "^2.1.2",
     "use-sound": "^1.0.2"
   }
