--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "mongoose": "^5.9.28",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
+    "path": "^0.12.7",
     "prop-types": "^15.7.2",
     "react-moment": "^0.9.7",
     "sweetalert": "^2.1.2",
