--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "passport-local": "^1.0.0",
     "path": "^0.12.7",
     "prop-types": "^15.7.2",
+    "react-fade-in": "^1.1.0",
     "react-moment": "^0.9.7",
     "sweetalert": "^2.1.2",
     "use-sound": "^1.0.2"
