--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "prop-types": "^15.7.2",
     "react-fade-in": "^1.1.0",
     "react-moment": "^0.9.7",
+    "react-tooltip": "^4.2.10",
     "sweetalert": "^2.1.2",
     "use-sound": "^1.0.2"
   }
